Loosen CE authZ requirements to better support k8s

--- a/99-container.conf
+++ b/99-container.conf
@@ -1,5 +1,11 @@
 # Default opensciencegrid/hosted-ce container configuration
 
+# Admin commands are limited to localhost-only authN methods
+# so we can ignore the IP address for authZ purposes, which
+# was an issue because of the many valid IP addresses in k8s
+SUPERUSERS = condor@daemon.htcondor.org, root@daemon.htcondor.org
+FRIENDLY_DAEMONS = condor@daemon.htcondor.org, condor@child
+
 # Keep the remote WN client up-to-date
 SCHEDD_CRON_JOBLIST = $(SCHEDD_CRON_JOBLIST) WNCLIENT
 SCHEDD_CRON_WNCLIENT_MODE = Periodic
