--- a/10-htcondor-ce.conf
+++ b/10-htcondor-ce.conf
@@ -1,5 +1,5 @@
 [program:htcondor-ce]
-command=/usr/share/condor-ce/condor_ce_startup
+command=/usr/share/condor-ce/condor_ce_startup -f
 autorestart=true
 startsecs=20
 
