Specify the args to the Hosted CE schedd cron (SOFTWARE-3973)

--- a/99-container.conf
+++ b/99-container.conf
@@ -6,6 +6,13 @@
 SUPERUSERS = condor@daemon.htcondor.org, root@daemon.htcondor.org
 FRIENDLY_DAEMONS = condor@daemon.htcondor.org, condor@child
 
+# TODO: Remove this after osg-ce is released in
+# https://jira.opensciencegrid.org/browse/SOFTWARE-3973
+SCHEDD_CRON_GRATIA_ARGS = -f /etc/gratia/htcondor-ce/ProbeConfig
+# Increase frequency so that condor_meter doesn't take too long when
+# running drain-ce.h on container teardown
+SCHEDD_CRON_GRATIA_PERIOD = 4h
+
 # Keep the remote WN client up-to-date
 SCHEDD_CRON_JOBLIST = $(SCHEDD_CRON_JOBLIST) WNCLIENT
 SCHEDD_CRON_WNCLIENT_MODE = Periodic
