Fix args to WN client updater schedd cron

--- a/99-container.conf
+++ b/99-container.conf
@@ -17,7 +17,8 @@ SCHEDD_CRON_GRATIA_PERIOD = 4h
 SCHEDD_CRON_JOBLIST = $(SCHEDD_CRON_JOBLIST) WNCLIENT
 SCHEDD_CRON_WNCLIENT_MODE = Periodic
 SCHEDD_CRON_WNCLIENT_PERIOD = 12h
-SCHEDD_CRON_WNCLIENT_EXECUTABLE = /usr/bin/update-all-remote-wn-clients --log-dir /var/log/condor-ce/
+SCHEDD_CRON_WNCLIENT_EXECUTABLE = /usr/bin/update-all-remote-wn-clients
+SCHEDD_CRON_WNCLIENT_ARGS = --log-dir /var/log/condor-ce/
 SCHEDD_CRON_WNCLIENT_PREFIX = WNCLIENT
 
 # Bump debug levels; store additional rollovers for commonly used logs
