Disable the ability to run jobs on the CE

--- a/99-container.conf
+++ b/99-container.conf
@@ -27,3 +27,8 @@ ALL_DEBUG = $(ALL_DEBUG) D_CAT D_ALWAYS:2
 SCHEDD_NUM_LOGS = 10
 JOB_ROUTER_NUM_LOGS = 10
 GRIDMANAGER_NUM_LOGS = 10
+
+# Disable the ability to run jobs on the CE
+# https://opensciencegrid.org/docs/compute-element/install-htcondor-ce/#limiting-or-disabling-locally-running-jobs-on-the-ce
+START_LOCAL_UNIVERSE = False
+START_SCHEDULER_UNIVERSE = $(START_LOCAL_UNIVERSE)
